fix: custom scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -68,6 +68,39 @@ html {
   font-family: "Geist Sans", sans-serif;
 }
 
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f1f1f1;
+    -ms-overflow-style: none; /* for IE, Edge */
+    scrollbar-width: none; /* for Firefox */
+}
+*:hover {
+  -ms-overflow-style: auto; /* for IE, Edge */
+  scrollbar-width: thin; /* for Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* for WebKit browsers */
+  width: 7px;
+}
+
+*:hover::-webkit-scrollbar {
+  display: block; /* for WebKit browsers */
+}
+
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .dark {
   background: var(--background);
   --background: #1c1c1e;
